--- a/MDTManagment/MDTManagment/MainWindow.xaml
+++ b/MDTManagment/MDTManagment/MainWindow.xaml
@@ -7,6 +7,6 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="350" Width="525">
     <Grid>
-        <TextBlock Text="Stoianchoo"></TextBlock>
+        <TextBlock Text="Stoiaййnchoo"></TextBlock>
     </Grid>
 </Window>
