--- a/MDTManagment/MDTManagment/DentistWindow.xaml
+++ b/MDTManagment/MDTManagment/DentistWindow.xaml
@@ -1,12 +1,13 @@
-﻿<Window x:Class="MDTManagment.MainWindow"
+﻿<Window x:Class="MDTManagment.DentistWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:MDTManagment"
         mc:Ignorable="d"
-        Title="MainWindow" Height="350" Width="525">
+        Title="DentistWindow" Height="300" Width="300">
     <StackPanel>
-        <Button>Show dentist</Button>
+        <TextBlock Text="{Binding Name}"></TextBlock>
+        <TextBlock Text="{Binding PhoneNumber}"></TextBlock>
     </StackPanel>
 </Window>
