--- a/MDTManagment/MDTManagment/App.xaml
+++ b/MDTManagment/MDTManagment/App.xaml
@@ -2,7 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:MDTManagment"
-             StartupUri="DentistsWindow.xaml">
+             StartupUri="OrdersWindow.xaml">
     <Application.Resources>
          
     </Application.Resources>
