--- a/MDTManagment/MDTManagment/OrdersWindow.xaml
+++ b/MDTManagment/MDTManagment/OrdersWindow.xaml
@@ -1,14 +1,15 @@
-﻿<Window x:Class="MDTManagment.DentistsWindow"
+﻿<Window x:Class="MDTManagment.OrdersWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="DentistsWindow" Height="300" Width="300">
     <StackPanel>
-        <ListView ItemsSource="{Binding Dentists}" Height="250">
+        <ListView ItemsSource="{Binding Orders}" Height="250">
             <ListView.ItemTemplate>
                 <DataTemplate>
                     <StackPanel Orientation="Horizontal">
                         <TextBlock Text="{Binding Name}"></TextBlock>
-                        <TextBlock Text="{Binding PhoneNumber}"></TextBlock>
+                        <TextBlock Text="{Binding Price}"></TextBlock>
+                        <TextBlock Text="{Binding PaidPrice}"></TextBlock>
                     </StackPanel>
                 </DataTemplate>
             </ListView.ItemTemplate>
