--- a/MDTManagment/MDTManagment/StartupWindow.xaml
+++ b/MDTManagment/MDTManagment/StartupWindow.xaml
@@ -1,14 +1,10 @@
-﻿<Window x:Class="MDTManagment.DentistWindow"
+﻿<NavigationWindow x:Class="MDTManagment.StartupWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:MDTManagment"
         mc:Ignorable="d"
-        Title="DentistWindow" Height="300" Width="300">
-    <StackPanel>
-        <TextBlock Text="{Binding Name}"></TextBlock>
-        <TextBlock Text="{Binding PhoneNumber}"></TextBlock>
-   
-    </StackPanel>
-</Window>
+        Source="Views/HomePage.xaml"
+        Title="StartupWindow" Height="300" Width="300">
+</NavigationWindow>
