--- a/MDTManagment/MDTManagment/Views/OrdersPage.xaml
+++ b/MDTManagment/MDTManagment/Views/OrdersPage.xaml
@@ -1,7 +1,12 @@
-﻿<Window x:Class="MDTManagment.OrdersWindow"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="DentistsWindow" Height="300" Width="300">
+﻿<Page x:Class="MDTManagment.Views.OrdersPage"
+      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+      xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+      xmlns:local="clr-namespace:MDTManagment.Views"
+      mc:Ignorable="d" 
+      d:DesignHeight="300" d:DesignWidth="300"
+      Title="OrdersPage">
     <StackPanel>
         <ListView ItemsSource="{Binding Orders}" Height="250">
             <ListView.ItemTemplate>
@@ -15,4 +20,4 @@
             </ListView.ItemTemplate>
         </ListView>
     </StackPanel>
-</Window>
+</Page>
