--- a/MDTManagment/MDTManagment/Views/PatientsPage.xaml
+++ b/MDTManagment/MDTManagment/Views/PatientsPage.xaml
@@ -1,22 +1,24 @@
-﻿<Page x:Class="MDTManagment.Views.DentistsPage"
+﻿<Page x:Class="MDTManagment.Views.PatientsPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:local="clr-namespace:MDTManagment.Views"
       mc:Ignorable="d" 
       d:DesignHeight="300" d:DesignWidth="300"
-      Title="DentistsPage">
+	Title="PatientsPage">
 
     <StackPanel>
-        <ListView ItemsSource="{Binding Dentists}" Height="250">
+        <ListView ItemsSource="{Binding Patients}" Height="250">
             <ListView.ItemTemplate>
                 <DataTemplate>
                     <StackPanel Orientation="Horizontal">
-                        <TextBlock Text="{Binding Name}"></TextBlock>
+                        <TextBlock Text="{Binding FirstName}"></TextBlock>
+                        <TextBlock Text="{Binding SurName}"></TextBlock>
                         <TextBlock Text="{Binding Family}"></TextBlock>
                         <TextBlock Text="{Binding PhoneNumber}"></TextBlock>
-                        <Button  Command="{Binding Path=DataContext.ViewDentistCommand, 
+                        <TextBlock Text="{Binding Age}"></TextBlock>
+                        <TextBlock Text="{Binding Address}"></TextBlock>
+                        <Button  Command="{Binding Path=DataContext.ViewPatientCommand, 
                                     RelativeSource={RelativeSource Mode=FindAncestor,      
                                     AncestorType={x:Type ItemsControl}} }"
                                  CommandParameter="{Binding Id}">View</Button>
