--- a/MDTManagment/MDTManagment/Views/Dentists/DentistsPage.xaml
+++ b/MDTManagment/MDTManagment/Views/Dentists/DentistsPage.xaml
@@ -1,11 +1,11 @@
-﻿<Page x:Class="MDTManagment.Views.DentistsPage"
+﻿<Page x:Class="MDTManagment.Views.Dentists.DentistsPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:MDTManagment.Views"
       mc:Ignorable="d" 
-      xmlns:ViewModels ="clr-namespace:MDTManagment.ViewModels" 
+      xmlns:ViewModels ="clr-namespace:MDTManagment.ViewModels.Dentists" 
       d:DesignHeight="300" d:DesignWidth="300"
       Title="DentistsPage">
    
@@ -18,7 +18,8 @@
 
         <Grid Grid.Column="0">
             
-            <ListView ItemsSource="{Binding Dentists}" IsSynchronizedWithCurrentItem="True">
+            <ListView ItemsSource="{Binding Dentists}" IsSynchronizedWithCurrentItem="True" 
+                      SelectedItem="{Binding SelectedDentist, Mode=TwoWay}">
                 <ListView.View>
                     <GridView>
                         <GridView.Columns>
