--- a/MDTManagment/MDTManagment/Views/Patients/AddPatientPage.xaml
+++ b/MDTManagment/MDTManagment/Views/Patients/AddPatientPage.xaml
@@ -1,4 +1,4 @@
-﻿<Page x:Class="MDTManagment.Views.AddPatientPage"
+﻿<Page x:Class="MDTManagment.Views.Patients.AddPatientPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
