--- a/MDTManagment/MDTManagment/Views/Patients/AddPatientPage.xaml
+++ b/MDTManagment/MDTManagment/Views/Patients/AddPatientPage.xaml
@@ -21,6 +21,7 @@
             <RowDefinition></RowDefinition>
             <RowDefinition></RowDefinition>
             <RowDefinition></RowDefinition>
+            <RowDefinition></RowDefinition>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
             <ColumnDefinition></ColumnDefinition>
@@ -52,93 +53,35 @@
         </Grid>
 
 
-        <Grid DataContext="{Binding NewPatient}" Grid.Column="1" Grid.Row="0">
-            <TextBox Text="{Binding Path=FirstName}" Height="20"></TextBox>
+        <Grid Grid.Column="1" Grid.Row="0">
+            <TextBox Text="{Binding NewPatient.FirstName}" Height="20"></TextBox>
         </Grid>
-        <Grid DataContext="{Binding NewPatient}" Grid.Column="1" Grid.Row="1" >
-            <TextBox Text="{Binding Path=Surname}" Height="20"></TextBox>
+        <Grid Grid.Column="1" Grid.Row="1" >
+            <TextBox Text="{Binding NewPatient.Surname}" Height="20"></TextBox>
         </Grid>
-        <Grid DataContext="{Binding NewPatient}" Grid.Column="1" Grid.Row="2">
-            <TextBox Text="{Binding Path=Family}" Height="20"></TextBox>
+        <Grid Grid.Column="1" Grid.Row="2">
+            <TextBox Text="{Binding NewPatient.Family}" Height="20"></TextBox>
         </Grid>
-        <Grid DataContext="{Binding NewPatient}" Grid.Column="1" Grid.Row="3">
-            <TextBox Text="{Binding Path=Age}" Height="20"></TextBox>
+        <Grid Grid.Column="1" Grid.Row="3">
+            <TextBox Text="{Binding NewPatient.Age}" Height="20"></TextBox>
         </Grid>
-        <Grid DataContext="{Binding NewPatient}" Grid.Column="1" Grid.Row="4">
-            <TextBox Text="{Binding Path=Address}" Height="20"></TextBox>
+        <Grid Grid.Column="1" Grid.Row="4">
+            <TextBox Text="{Binding NewPatient.Address}" Height="20"></TextBox>
         </Grid>
-        <Grid DataContext="{Binding NewPatient}" Grid.Column="1" Grid.Row="5">
-            <TextBox Text="{Binding Path=PhoneNumber}" Height="20"></TextBox>
+        <Grid Grid.Column="1" Grid.Row="5">
+            <TextBox Text="{Binding NewPatient.PhoneNumber}" Height="20"></TextBox>
         </Grid>
-        
-        
-        
-        
-        
-        
-        <!--<Grid DataContext="{Binding NewPatient}" Grid.Column="1" Grid.Row="5">
-            <TextBox Text="{Binding Path=Dentist}" Height="20"></TextBox>
-            --><!--tva ne trqa da e textblock ami Listview bind-ato kym obser<select>Dentists --><!--
-        </Grid>-->
-
-
-        <Grid Grid.Column="1" Grid.Row="6">          <!--DataContext="{Binding NewPatient}"-->  <!--TVA TUKA NE E TAKA ZA DC-->
-            <ListView ItemsSource="{Binding PtDentists}" IsSynchronizedWithCurrentItem="True">
-                <ListView.ItemTemplate>
-                    <DataTemplate>
-                         <StackPanel Orientation="Horizontal">
-                                <CheckBox Tag="{Binding isSelected, Mode=TwoWay}"></CheckBox>
-                                <TextBlock Text="{Binding Name}"></TextBlock>
-                                <!--<TextBlock Text="{Binding Dentist.LastName}"></TextBlock>-->
-                          </StackPanel>
-                    </DataTemplate> 
-                </ListView.ItemTemplate>
-            </ListView>
-            <!--<TextBox Text="{Binding Path=Dentist}" Height="20"></TextBox>-->
-            <!--tva ne trqa da e textblock ami Listview bind-ato kym obser<select>Dentists -->
-        </Grid>
-
-        <!--nz dali tuka trqa da se promeni dataContext v code-behinda
-        syshto trqbva da se promeni NewDentist na observable-la koito e v SelectViewModela-->
-
-
-        
-        
-        
-        
-        
-<!--Stariq ComboBox-->
-        <!--<Grid Grid.Column="2" Grid.Row="6">
-            <Button Content="AddPatient" Command="{Binding AddPatient}" Height="20" Width="70"/>
-    
-        </Grid>
-
-        <Grid Grid.Column="2" Grid.Row="5">
-           
-            <ComboBox ItemsSource="{Binding Dentists}"
-                      SelectedIndex="0"
-                      Height="20" 
-                      Width="70"
-                      SelectedItem="{Binding Path=NewPatient.DentistPt}">
-                
-                
-                
-                <ComboBox.ItemTemplate>
-                    <DataTemplate>
-                        <TextBlock>
-                                    <TextBlock Text="{Binding Name}"/> <TextBlock Text="{Binding LastName}"/>
-                                
-                        </TextBlock>
-                        
-                    </DataTemplate>
-                </ComboBox.ItemTemplate>
+        <Grid Grid.Column="1" Grid.Row="6" >
+            <ComboBox
+                ItemsSource="{Binding Dentists}" 
+                SelectedValue="{Binding NewPatient.DentistId}"
+                SelectedValuePath="Id"
+                DisplayMemberPath="Name">
             </ComboBox>
-        </Grid>-->
-
-        
-
-
+        </Grid>
+   
+        <Grid Grid.Column="2" Grid.Row="7">
+            <Button Content="AddPatient" Command="{Binding AddPatient}" Height="20" Width="70"/>    
+        </Grid>
     </Grid>
-
-
 </Page>
